# fsm.c

./: CMakeLists.txt  README.md  build.sh  force_consume_error.auto  forced_error.auto  go.mod  idea.txt  last_must_be_one.auto  test.auto  transition_error.auto
pkg/automaton/: automaton.go  automaton_test.go
pkg/compiler/: lexer.go  lexer_test.go
src/: main.c
src/automaton/: automaton.c  automaton.h
src/fsm/: fsm.c  fsm.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h
tests/: CMakeLists.txt  automaton_test.cpp  fsm_test.cpp  lexer_test.cpp  parser_test.cpp
